[project]
name = "messager"
version = "1.1.3"
authors = [
  { name = "Claire Childers", email = "clairechilders@oakland.edu" },
]
description = "A basic messaging script for demonstration purposes"
license = "MIT"

[project.urls]
Homepage = "https://github.com/CLDC-OU/ExampleMessager"
Repository = "https://github.com/CLDC-OU/ExampleMessager.git"
